--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -8,15 +8,16 @@
     <title>Bosque Bahual</title>
 </head>
 <body>
-    <div class="dropdown">
-        <button class="dropdown-btn">Dropdown</button>
-        <div class="dropdown-content">
-            <a href="#">Inicio</a>
-            <a href="#">Nosotros</a>
-            <a href="#">Contacto</a>
-        </div>
-    </div>
-    <h1>Inicio</h1>
+    <header>
+        <nav>
+            <ul>
+            <li><a href="#">Inicio</a></li>
+            <li><a href="#">Nosotros</a></li>
+            <li><a href="#">Blog</a></l>
+            <li><a href="#">Contacto</a></li>
+         </ul>
+        </nav>
+    </header>
     <script src="js/app.js"></script>
 </body>
 </html>
