--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -18,6 +18,9 @@
          </ul>
         </nav>
     </header>
+    <div>
+    <img src="../img/Image.jpeg" />
+    </div>
     <script src="js/app.js"></script>
 </body>
 </html>
