caja formulario, img editada, mision-vision

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,26 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
-    <title>Bosque Bahual</title>
-</head>
-<body>
-    <header>
-        <nav>
-            <ul>
-            <li><a href="#">Inicio</a></li>
-            <li><a href="#">Nosotros</a></li>
-            <li><a href="#">Blog</a></l>
-            <li><a href="#">Contacto</a></li>
-         </ul>
-        </nav>
-    </header>
-    <div>
-        <img src="Image.jpeg" />
-    </div>
-    <script src="js/app.js"></script>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="/style.css">
+        <title>Bosque Bahual</title>
+    </head>
+    <body>
+        <i class="fa-sharp fa-solid fa-trees" style="color: #38571a;"></i>
+        <header>
+            <nav>
+                <ul>
+                    <li><a href="#">Inicio</a></li>
+                    <li><a href="#">Nosotros</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Contacto</a></li>
+                </ul>
+            </nav>
+        </header>
+        <div>
+            <img src="Image.jpeg" />
+        </div>
+        <div>
+            <div class="container">
+                <div class="box">
+                    <h2>Misión</h2>
+                    <p>Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                    <h2>Visión</h2>
+                    <p>Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="box">
+                <form> 
+                    <h2 style="font-family: Didot, serif">Contacto</h2>
+                    <label>Nombre</label>
+                    <input type="text" id="Nombre" name="Nombre" placeholder="Nombre" />
+                    <label>Apellido</label>
+                    <input type="text" id="apellido" name="Apellido" placeholder="Apellido" />
+                    <label>Mensaje</label>
+                    <textarea></textarea>
+                    <input type="submit" value="Aceptar" />
+                </form>
+            </div>
+        </div>
+        <script src="js/app.js"></script>
+    </body>
 </html>
