--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,6 +1,20 @@
 body {
     background-image: url("../img/Image.jpeg");
-    
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat; /* Evita que la imagen se repita */
+    text-align: center; /* Centra la imagen */
+    background-attachment: fixed;
+}
+
+img {
+    display: block;
+		margin: auto;
+		width: 50%;
+		border: none;
+    background-size: cover;
 }
 
 header {
@@ -16,7 +30,7 @@ header {
   
   nav ul {
     list-style: none;
-    overflow: hidden; 
+    overflow: auto; 
   }
   
   nav ul li {
@@ -34,4 +48,46 @@ header {
     background: #778c43;
   }
 
+  .container {
+    max-width: 584px;
+    margin: 0 auto;
+}
+
+
+  .box {
+    background-color: white;
+    padding: 12px 20px;
+    border-radius: 4px;
+    box-shadow: 0px 2px 2px rgba(0,0,0,0.1);
+  }
   
+  input[type=text] {
+    width: 40%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+  }
+  
+  input[type=submit] {
+    width: 40%;
+    background-color: grey;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  
+  textarea {
+    width: 40%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+  }
