--- a/src/css/style.css
+++ b/src/css/style.css
@@ -6,13 +6,13 @@ body {
     background-position: center center;
     background-repeat: no-repeat; /* Evita que la imagen se repita */
     text-align: center; /* Centra la imagen */
-    background-attachment: fixed;
+    background-attachment: scroll;
 }
 
 img {
     display: block;
 		margin: auto;
-		width: 50%;
+		width: 200px;
 		border: none;
     background-size: cover;
 }
@@ -53,6 +53,14 @@ header {
     margin: 0 auto;
 }
 
+  .circle {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    background-color: transparent; /* Puedes cambiar el color de fondo según tus necesidades */
+    border: 1px solid grey;
+    box-shadow: 0px 2px 2px rgba(0,0,0,0.1);
+  }
 
   .box {
     background-color: white;
