--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -46,6 +46,21 @@
                 </form>
             </div>
         </div>
+        
+        <div class="contact-box">
+            <h2>Contáctanos</h2>
+            <p>Para cualquier pregunta o comentario, por favor llena el siguiente formulario:</p>
+            <form action="enviar.php" method="post">
+              <label for="nombre">Nombre:</label>
+              <input type="text" id="nombre" name="nombre"><br><br>
+              <label for="correo">Correo electrónico:</label>
+              <input type="email" id="correo" name="correo"><br><br>
+              <label for="mensaje">Mensaje:</label>
+              <textarea id="mensaje" name="mensaje"></textarea><br><br>
+              <input type="submit" value="Enviar">
+            </form>
+          </div>
+          
         <div class="text-center">
             <div class="spinner-border" role="status">
               <span class="visually-hidden">Cargando...</span>
